--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
   <script src="main.js"></script>
-<title>Live or Die</title>
+<title>Amaze</title>
 </head>
 
 
@@ -15,29 +15,29 @@
 
 <div class="wrap">
 	<div class="block-container">
-		<div class="block" id="1">1</div>
+		<div class="block " id="1"><p>1</p></div>
 		<div class="block" id="2">2</div>
 		<div class="block" id="3">3</div>
-		<div class="block" id="4">4</div>
+		<div class="block black" id="4">4</div>
 	</div>
 
 	<div class="block-container">
 		<div class="block" id="5">5</div>
-		<div class="block" class=" background-blk" id="6">6</div>
+		<div class="block black" id="6">6</div>
 		<div class="block" id="7">7</div>
-		<div class="block" id="8">8</div>
+		<div class="block black" id="8">8</div>
 	</div>
 
 	<div class="block-container">
 		<div class="block">9</div>
-		<div class="block">a</div>
+		<div class="block black">a</div>
 		<div class="block">b</div>
-		<div class="block">c</div>
+		<div class="block black">c</div>
 	</div>
 
 	<div class="block-container">
 		<div class="block">d</div>
-		<div class="block">e</div>
+		<div class="block black">e</div>
 		<div class="block">f</div>
 		<div class="block">g</div>
 	</div>
