complete of first maze, with added fucntions

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
 
+
 <div class="wrap">
 	<div class="block-container">
 		<div class="block " id="1"><p>1</p></div>
@@ -41,6 +42,8 @@
 		<div class="block">f</div>
 		<div class="block">g</div>
 	</div>
+
+	<h3 id="message">text message</h3>
 
 
 
