--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="style.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
-  <script src="main.js"></script>
+<script src= "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
+<script src="main.js"></script>
+
 <title>Amaze</title>
+
 </head>
 
 
@@ -13,6 +15,10 @@
 
 <body>
 
+<div class="menu">
+	<li id="start">Start</li>
+	<li>Instructions</li>	
+</div>
 
 <div class="wrap">
 	<div class="block-container">
@@ -20,6 +26,7 @@
 		<div class="block" id="2">2</div>
 		<div class="block" id="3">3</div>
 		<div class="block black" id="4">4</div>
+		<div class='block' id='20'>20</div>
 	</div>
 
 	<div class="block-container">
@@ -27,27 +34,45 @@
 		<div class="block black" id="6">6</div>
 		<div class="block" id="7">7</div>
 		<div class="block black" id="8">8</div>
+		<div class='block' id='19'>19</div>
+
+
 	</div>
 
 	<div class="block-container">
-		<div class="block">9</div>
-		<div class="block black">a</div>
-		<div class="block">b</div>
-		<div class="block black">c</div>
+		<div class="block" id="9">9</div>
+		<div class="block black" id="10">10</div>
+		<div class="block" id="11">11</div>
+		<div class="block black" id="12">12</div>	
+		<div class='block' id='13'>13</div>
+
+	
+
 	</div>
 
 	<div class="block-container">
-		<div class="block">d</div>
-		<div class="block black">e</div>
-		<div class="block">f</div>
-		<div class="block">g</div>
+		<div class="block" id="d">14</div>
+		<div class="block black" id="15">15</div>
+		<div class="block" id="16">16</div>
+		<div class="block" id="17">17</div>
+		<div class='block' id='18'>18</div>
+
 	</div>
 
-	<h3 id="message">text message</h3>
 
+
+	<div id="message">start here</div>
+	
+	<aside id="next">Next</aside>
 
 
 </div>
+
+
+<div>
+	
+</div>
+
 
 
 <!-- 
