added next function, with message saying proceed to next lvl 2

--- a/index.html
+++ b/index.html
@@ -59,19 +59,28 @@
 
 	</div>
 
+	<div class="block-container" id="level2">
+		<div class="block" id="d">14</div>
+		<div class="block black" id="15">15</div>
+		<div class="block" id="16">16</div>
+		<div class="block" id="17">17</div>
+		<div class='block' id='18'>18</div>
 
 
-	<div id="message">start here</div>
 	
+
+
+</div>
+
+	
+	<div id="message">start here</div>
+
+
+
 	<aside id="next">Next</aside>
 
 
-</div>
-
-
-<div>
 	
-</div>
 
 
 
