--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 		<div class="block" id="3">3</div>
 		<div class="block black" id="4">4</div>
 		<div class='block' id='20'>20</div>
+<div class='block hiddenLevel'>0</div>	
+
 	</div>
 
 	<div class="block-container">
@@ -35,7 +37,7 @@
 		<div class="block" id="7">7</div>
 		<div class="block black" id="8">8</div>
 		<div class='block' id='19'>19</div>
-
+<div class='block hiddenLevel'>0</div>
 
 	</div>
 
@@ -45,7 +47,7 @@
 		<div class="block" id="11">11</div>
 		<div class="block black" id="12">12</div>	
 		<div class='block' id='13'>13</div>
-
+<div class='block hiddenLevel'>0</div>
 	
 
 	</div>
@@ -57,20 +59,18 @@
 		<div class="block" id="17">17</div>
 		<div class='block' id='18'>18</div>
 
+		<div class='block hiddenLevel'>0</div>
+
 	</div>
 
-	<div class="block-container" id="level2">
-		<div class="block" id="d">14</div>
-		<div class="block black" id="15">15</div>
-		<div class="block" id="16">16</div>
-		<div class="block" id="17">17</div>
-		<div class='block' id='18'>18</div>
-
-
-	
-
-
-</div>
+	<div class="block-container hiddenLevel" id="level2">
+		<div class="block" id="21">21</div>
+		<div class="block black" id="22">22</div>
+		<div class="block" id="23">23</div>
+		<div class="block" id="24">24</div>
+		<div class='block' id='25'>25</div>
+	</div>
+	</div>
 
 	
 	<div id="message">start here</div>
