--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
 		<div class="block" id="3">3</div>
 		<div class="block black" id="4">4</div>
 		<div class='block' id='20'>20</div>
-<div class='block hiddenLevel'>0</div>	
 
+<!-- <div class='block hiddenLevel'>0</div>	
+ -->
 	</div>
 
 	<div class="block-container">
@@ -37,8 +38,9 @@
 		<div class="block" id="7">7</div>
 		<div class="block black" id="8">8</div>
 		<div class='block' id='19'>19</div>
-<div class='block hiddenLevel'>0</div>
 
+<!-- <div class='block hiddenLevel'>0</div>
+ -->
 	</div>
 
 	<div class="block-container">
@@ -47,7 +49,8 @@
 		<div class="block" id="11">11</div>
 		<div class="block black" id="12">12</div>	
 		<div class='block' id='13'>13</div>
-<div class='block hiddenLevel'>0</div>
+
+<!-- <div class='block hiddenLevel'>0</div> -->
 	
 
 	</div>
@@ -59,7 +62,7 @@
 		<div class="block" id="17">17</div>
 		<div class='block' id='18'>18</div>
 
-		<div class='block hiddenLevel'>0</div>
+		<!-- <div class='block hiddenLevel'>0</div> -->
 
 	</div>
 
@@ -69,7 +72,10 @@
 		<div class="block" id="23">23</div>
 		<div class="block" id="24">24</div>
 		<div class='block' id='25'>25</div>
-	</div>
+<!-- 		<div class="block" id='to'>0</div>
+ -->	</div>
+	
+
 	</div>
 
 	
