--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
 		<div class="block" id="2">2</div>
 		<div class="block" id="3">3</div>
 		<div class="block black" id="4">4</div>
-		<div class='block' id='20'>20</div>
+		<div class='block exit' id='20'>Exit</div>
 
-<!-- <div class='block hiddenLevel'>0</div>	
- -->
+	
 	</div>
 
 	<div class="block-container">
@@ -39,8 +38,7 @@
 		<div class="block black" id="8">8</div>
 		<div class='block' id='19'>19</div>
 
-<!-- <div class='block hiddenLevel'>0</div>
- -->
+	
 	</div>
 
 	<div class="block-container">
@@ -50,19 +48,20 @@
 		<div class="block black" id="12">12</div>	
 		<div class='block' id='13'>13</div>
 
-<!-- <div class='block hiddenLevel'>0</div> -->
 	
 
 	</div>
 
 	<div class="block-container">
-		<div class="block" id="d">14</div>
-		<div class="block black" id="15">15</div>
-		<div class="block" id="16">16</div>
-		<div class="block" id="17">17</div>
-		<div class='block' id='18'>18</div>
-
-		<!-- <div class='block hiddenLevel'>0</div> -->
+		<div class="block" id="startButton">
+			<div>
+				<p>Click to Start</p>
+			</div>
+		</div>
+	<div class="block black" id="15">15</div>
+	<div class="block" id="16">16</div>
+	<div class="block" id="17">17</div>
+	<div class='block' id='18'>18</div>
 
 	</div>
 
@@ -72,66 +71,25 @@
 		<div class="block" id="23">23</div>
 		<div class="block" id="24">24</div>
 		<div class='block' id='25'>25</div>
-<!-- 		<div class="block" id='to'>0</div>
- -->	</div>
+		<div class="block" >0</div>
+
+ 	</div>
 	
 
 	</div>
+<!-- start of second level -->
+
+
+
 
 	
+
+
 	<div id="message">start here</div>
 
 
 
 	<aside id="next">Next</aside>
-
-
-	
-
-
-
-<!-- 
-<div id="border">
-
-<div class="row">
-	<ul>
-		<li id="1">1</li>
-		<li id="2">2</li>
-		<li id="3">3</li>
-		<li class="black-bg" id="4">4</li>
-	</ul>
-
-</div>
-<div class="row">
-	<ul>
-		<li id="5">5</li>
-		<li class="black-bg" id="6">6</li>
-		<li id="7">7</li>
-		<li class="black-bg" id="8">8</li>
-		
-
-</div>
-
-<div class="row">
-	<ul>
-		<li id="9">9</li>
-		<li class="black-bg" id="a">a</li>
-		<li id="b">b</li>
-		<li class="black-bg" id="c">c</li>
-	</ul>
-</div>
-
-<div class="row">
-	<ul>
-		<li id="d">d</li>
-		<li class="black-bg" id="e">e</li>
-		<li id="f">f</li>
-		<li id="g">g</li>
-	</ul>
-</div>
-
-
-</div> -->
 
 
 
