completed second map but need it add no diplay

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 </div>
 
 <div class="wrap">
+
 	<div class="block-container">
 		<div class="block " id="1"><p>1</p></div>
 		<div class="block" id="2">2</div>
 		<div class="block" id="3">3</div>
 		<div class="block black" id="4">4</div>
-		<div class='block exit' id='20'>Exit</div>
-
+		<div class='block exit' id='20'>20</div>
 	
 	</div>
 
@@ -38,7 +38,7 @@
 		<div class="block black" id="8">8</div>
 		<div class='block' id='19'>19</div>
 
-	
+
 	</div>
 
 	<div class="block-container">
@@ -53,46 +53,81 @@
 	</div>
 
 	<div class="block-container">
-		<div class="block" id="startButton">
-			<div>
-				<p>Click to Start</p>
-			</div>
-		</div>
-	<div class="block black" id="15">15</div>
-	<div class="block" id="16">16</div>
-	<div class="block" id="17">17</div>
-	<div class='block' id='18'>18</div>
+		<div class="block" id="startButton">Click to Start</div>
+		<div class="block black" id="15">15</div>
+		<div class="block" id="16">16</div>
+		<div class="block" id="17">17</div>
+		<div class='block' id='18'>18</div>
+
 
 	</div>
 
-	<div class="block-container hiddenLevel" id="level2">
-		<div class="block" id="21">21</div>
-		<div class="block black" id="22">22</div>
-		<div class="block" id="23">23</div>
-		<div class="block" id="24">24</div>
-		<div class='block' id='25'>25</div>
-		<div class="block" >0</div>
-
- 	</div>
-	
-
-	</div>
-<!-- start of second level -->
-
-
-
-
-	
-
-
-	<div id="message">start here</div>
 
 
 
 	<aside id="next">Next</aside>
 
+<!-- start level 2 -->
+	
+<!-- start level 3 -->
+<div class="wrap-2">
+
+	<div class="block-container">
+		<div class="block " id="1"><p>1</p></div>
+		<div class="block" id="2">2</div>
+		<div class="block" id="3">3</div>
+		<div class="block black" id="4">4</div>
+		<div class='block exit' id='20'>20</div>
+		<div class='block exit' id='20'>20</div>
+	
+	</div>
+
+	<div class="block-container">
+		<div class="block" id="5">5</div>
+		<div class="block black" id="6">6</div>
+		<div class="block" id="7">7</div>
+		<div class="block black" id="8">8</div>
+		<div class='block' id='19'>19</div>
+		<div class='block' id='19'>19</div>
 
 
+	</div>
+
+	<div class="block-container">
+		<div class="block" id="9">9</div>
+		<div class="block black" id="10">10</div>
+		<div class="block" id="11">11</div>
+		<div class="block black" id="12">12</div>	
+		<div class='block' id='13'>13</div>
+		<div class='block' id='13'>13</div>
+
+	
+
+	</div>
+
+	<div class="block-container">
+		<div class="block" id="startButton">Click to Start</div>
+		<div class="block black" id="15">15</div>
+		<div class="block" id="16">16</div>
+		<div class="block" id="17">17</div>
+		<div class='block' id='18'>18</div>
+		<div class='block' id='18'>18</div>
+
+
+	</div>
+
+
+	<div class="block-container">
+		<div class="block" id="startButton">Click to Start</div>
+		<div class="block black" id="15">15</div>
+		<div class="block" id="16">16</div>
+		<div class="block" id="17">17</div>
+		<div class='block' id='18'>18</div>
+		<div class='block' id='18'>18</div>
+		
+
+
+	</div>
 
 
 
