completed second map but function not workingy

--- a/index.html
+++ b/index.html
@@ -62,15 +62,14 @@
 
 	</div>
 
-
+</div>
 
 
 	<aside id="next">Next</aside>
 
 <!-- start level 2 -->
 	
-<!-- start level 3 -->
-<div class="wrap-2">
+<div class="wrap" id='level2' >
 
 	<div class="block-container">
 		<div class="block " id="1"><p>1</p></div>
@@ -128,6 +127,9 @@
 
 
 	</div>
+
+</div>
+<!-- level 3 -->
 
 
 
