start menu complete and linked to ffirst map

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 </head>
 
 
-<h1>Find your way Out!!</h1>
+<h1>Amaze your way out!</h1>
 
 
 <body>
 
 <div class="menu">
 	<li id="start">Start</li>
-	<li>Instructions</li>	
+	<li id="instruct">Instructions</li>	
 </div>
 
-<div class="wrap">
+<div class="wrap" id='level1'>
 
 	<div class="block-container">
 		<div class="block " id="1"><p>1</p></div>
@@ -65,11 +65,16 @@
 </div>
 
 
-	<aside id="next">Next</aside>
+<aside id="next"> Next </aside>
 
-	
+<div id="tryAgian">
+	<li>Try Again </li>
+</div>
 
-<!-- start level 2 -->
+
+
+
+<!-- Below is Map level 2 -->
 	
 <div class="wrap" id='level2' >
 
