added try again div

--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
 
 <aside id="next"> Next </aside>
 
-<div id="tryAgian">
+<div id="tryAgain">
 	<li>Try Again </li>
 </div>
 
 
-
+	
 
 <!-- Below is Map level 2 -->
 	
