level1 fully functional, including menu page

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 <div class="wrap" id='level1'>
 
 	<div class="block-container">
-		<div class="block " id="1"><p>1</p></div>
+		<div class="block " id="1">1</div>
 		<div class="block" id="2">2</div>
 		<div class="block" id="3">3</div>
 		<div class="block black" id="4">4</div>
-		<div class='block exit' id='20'>20</div>
+		<div class='block exit' id='20'>Exit</div>
 	
 	</div>
 
@@ -112,7 +112,7 @@
 	</div>
 
 	<div class="block-container">
-		<div class="block" id="startButton">Click to Start</div>
+		<div class="block" >14</div>
 		<div class="block black" id="15">15</div>
 		<div class="block" id="16">16</div>
 		<div class="block" id="17">17</div>
