--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h1>Amaze your way out!</h1>
 
 
-<body>
+<body class="opened">
 
 <div class="menu">
 	<li id="start">Start</li>
@@ -53,7 +53,8 @@
 	</div>
 
 	<div class="block-container">
-		<div class="block" id="startButton">Click to Start</div>
+		<div class="block" id="startButton">Click Here to Start
+		</div>
 		<div class="block black" id="15">15</div>
 		<div class="block" id="16">16</div>
 		<div class="block" id="17">17</div>
@@ -83,8 +84,8 @@
 		<div class="block" id="2">2</div>
 		<div class="block" id="3">3</div>
 		<div class="block black" id="4">4</div>
-		<div class='block exit' id='20'>20</div>
-		<div class='block exit' id='20'>20</div>
+		<div class='block exit' >20</div>
+		<div class='block exit' >20</div>
 	
 	</div>
 
