level 2 started, building map

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 	<li id="instruct">Instructions</li>	
 </div>
 
+<div id="time">clock</div>
+
 <div class="wrap" id='level1'>
 
 	<div class="block-container">
@@ -53,7 +55,7 @@
 	</div>
 
 	<div class="block-container">
-		<div class="block" id="startButton">Click Here to Start
+		<div class="block startButton">Click Here to Start
 		</div>
 		<div class="block black" id="15">15</div>
 		<div class="block" id="16">16</div>
@@ -80,22 +82,22 @@
 <div class="wrap" id='level2' >
 
 	<div class="block-container">
-		<div class="block " id="1"><p>1</p></div>
-		<div class="block" id="2">2</div>
-		<div class="block" id="3">3</div>
-		<div class="block black" id="4">4</div>
-		<div class='block exit' >20</div>
-		<div class='block exit' >20</div>
+		<div class="block">1</div>
+		<div class="block " id='lvl2-2'>2</div>
+		<div class="block switch">3</div>
+		<div class="block">4</div>
+		<div class='block'>5</div>
+		<div class='block' >Exit</div>
 	
 	</div>
 
 	<div class="block-container">
-		<div class="block" id="5">5</div>
-		<div class="block black" id="6">6</div>
-		<div class="block" id="7">7</div>
-		<div class="block black" id="8">8</div>
-		<div class='block' id='19'>19</div>
-		<div class='block' id='19'>19</div>
+		<div class="block">5</div>
+		<div class="block black">6</div>
+		<div class="block">7</div>
+		<div class="block">8</div>
+		<div class='block'>20</div>
+		<div class='block'>21</div>
 
 
 	</div>
@@ -104,7 +106,7 @@
 		<div class="block" id="9">9</div>
 		<div class="block black" id="10">10</div>
 		<div class="block" id="11">11</div>
-		<div class="block black" id="12">12</div>	
+		<div class="block" id="12">12</div>	
 		<div class='block' id='13'>13</div>
 		<div class='block' id='13'>13</div>
 
@@ -118,19 +120,19 @@
 		<div class="block" id="16">16</div>
 		<div class="block" id="17">17</div>
 		<div class='block' id='18'>18</div>
-		<div class='block' id='18'>18</div>
+		<div class='block exit exit2' id='20'>18</div>
 
 
 	</div>
 
 
 	<div class="block-container">
-		<div class="block" id="startButton">Click to Start</div>
-		<div class="block black" id="15">15</div>
-		<div class="block" id="16">16</div>
-		<div class="block" id="17">17</div>
-		<div class='block' id='18'>18</div>
-		<div class='block' id='18'>18</div>
+		<div class="block startButton">Click to Start</div>
+		<div class="block black">15</div>
+		<div class="block" >16</div>
+		<div class="block" >17</div>
+		<div class='block' >18</div>
+		<div class='block' >18</div>
 		
 
 
