level 2 function working

--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
 
 	<div class="block-container">
 		<div class="block">1</div>
-		<div class="block " id='lvl2-2'>2</div>
-		<div class="block switch">3</div>
+		<div class="block " id='m2'>2</div>
+		<div class="block" id='m3'>3</div>
 		<div class="block">4</div>
 		<div class='block'>5</div>
-		<div class='block' >Exit</div>
+		<div class='block' >6</div>
 	
 	</div>
 
@@ -95,7 +95,7 @@
 		<div class="block">5</div>
 		<div class="block black">6</div>
 		<div class="block">7</div>
-		<div class="block">8</div>
+		<div class="block black">8</div>
 		<div class='block'>20</div>
 		<div class='block'>21</div>
 
@@ -104,9 +104,10 @@
 
 	<div class="block-container">
 		<div class="block" id="9">9</div>
-		<div class="block black" id="10">10</div>
+		<div class="block black" id="10">10
+		</div>
 		<div class="block" id="11">11</div>
-		<div class="block" id="12">12</div>	
+		<div class="block black" id="12">12</div>	
 		<div class='block' id='13'>13</div>
 		<div class='block' id='13'>13</div>
 
@@ -115,22 +116,24 @@
 	</div>
 
 	<div class="block-container">
-		<div class="block" >14</div>
-		<div class="block black" id="15">15</div>
+		<div class="block white" >14</div>
+		<div class="block black">
+		</div>
 		<div class="block" id="16">16</div>
-		<div class="block" id="17">17</div>
-		<div class='block' id='18'>18</div>
-		<div class='block exit exit2' id='20'>18</div>
+		<div class="block black" id="17">17
+		</div>
+		<div class='block' id='18'></div>
+		<div class='block exit exit2' id='20'>Exit</div>
 
 
 	</div>
 
 
 	<div class="block-container">
-		<div class="block startButton">Click to Start</div>
-		<div class="block black">15</div>
+		<div class="block startButton2">Click to Start</div>
+		<div class="block black" id='15'>15</div>
 		<div class="block" >16</div>
-		<div class="block" >17</div>
+		<div class="block black" >17</div>
 		<div class='block' >18</div>
 		<div class='block' >18</div>
 		
