--- a/index.html
+++ b/index.html
@@ -10,17 +10,16 @@
 </head>
 
 
-<h1>Amaze your way out!</h1>
-
-
 <body>
+
+<h1>Amaze</h1>
 
 <div class="menu">
 	<li id="start">Start</li>
 	<li id="instruct">Instructions</li>	
 </div>
 
-<div >
+<div class="instrPage">
 	<li class="instrPage">Welcom to Amaze, simply use the mouse to move the cursor to paly the game.
 	</li>
 	<li class="instrPage">The Objective is to move the cursor through the maze without touching the walls.
@@ -32,42 +31,42 @@
 <div class="wrap" id='level1'>
 
 	<div class="block-container">
-		<div class="block " id="1">1</div>
-		<div class="block" id="2">2</div>
-		<div class="block" id="3">3</div>
-		<div class="block black" id="4">4</div>
+		<div class="block " id="1"></div>
+		<div class="block" id="2"></div>
+		<div class="block" id="3"></div>
+		<div class="block black" id="4"></div>
 		<div class='block exit' id='20'>Exit</div>
 	
 	</div>
 
 	<div class="block-container">
-		<div class="block" id="5">5</div>
-		<div class="block black" id="6">6</div>
-		<div class="block" id="7">7</div>
-		<div class="block black" id="8">8</div>
-		<div class='block' id='19'>19</div>
+		<div class="block" id="5"></div>
+		<div class="block black" id="6"></div>
+		<div class="block" id="7"></div>
+		<div class="block black" id="8"></div>
+		<div class='block' id='19'></div>
 
 
 	</div>
 
 	<div class="block-container">
-		<div class="block" id="9">9</div>
-		<div class="block black" id="10">10</div>
-		<div class="block" id="11">11</div>
-		<div class="block black" id="12">12</div>	
-		<div class='block' id='13'>13</div>
+		<div class="block" id="9"></div>
+		<div class="block black" id="10"></div>
+		<div class="block" id="11"></div>
+		<div class="block black" id="12"></div>	
+		<div class='block' id='13'></div>
 
 	
 
 	</div>
 
 	<div class="block-container">
-		<div class="block startButton">Click Here to Start
+		<div class="block startButton" id="here">Click Here to Start
 		</div>
-		<div class="block black" id="15">15</div>
-		<div class="block" id="16">16</div>
-		<div class="block" id="17">17</div>
-		<div class='block' id='18'>18</div>
+		<div class="block black" id="15"></div>
+		<div class="block" id="16"></div>
+		<div class="block" id="17"></div>
+		<div class='block' id='18'></div>
 
 
 	</div>
@@ -89,46 +88,44 @@
 <div class="wrap" id='level2' >
 
 	<div class="block-container">
-		<div class="block">1</div>
-		<div class="block " id='m2'>2</div>
-		<div class="block" id='m3'>3</div>
-		<div class="block">4</div>
-		<div class='block'>5</div>
-		<div class='block' >6</div>
+		<div class="block"></div>
+		<div class="block " id='m2'></div>
+		<div class="block" id='m3'></div>
+		<div class="block"></div>
+		<div class='block'></div>
+		<div class='block' ></div>
 	
 	</div>
 
 	<div class="block-container">
-		<div class="block">5</div>
-		<div class="block black">6</div>
-		<div class="block">7</div>
-		<div class="block black" id='m8'>8</div>
-		<div class='block black'>20</div>
-		<div class='block'>21</div>
+		<div class="block"></div>
+		<div class="block black"></div>
+		<div class="block"></div>
+		<div class="block black" id='m8'></div>
+		<div class='block black'></div>
+		<div class='block'></div>
 
 
 	</div>
 
 	<div class="block-container">
-		<div class="block" id="9">9</div>
-		<div class="block black" id="10">10
-		</div>
-		<div class="block" id="11">11</div>
-		<div class="block black" id="12">12</div>	
-		<div class='block' id='13'>13</div>
-		<div class='block' id='13'>13</div>
+		<div class="block" id="9"></div>
+		<div class="block black" id="10"></div>
+		<div class="block" id="11"></div>
+		<div class="block black" id="12"></div>	
+		<div class='block' ></div>
+		<div class='block' ></div>
 
 	
 
 	</div>
 
 	<div class="block-container">
-		<div class="block white" >14</div>
+		<div class="block " ></div>
 		<div class="block black">
 		</div>
-		<div class="block" id="16">16</div>
-		<div class="block black" id="17">17
-		</div>
+		<div class="block" id="16"></div>
+		<div class="block black" id="17"></div>
 		<div class='block' id='18'></div>
 		<div class='block black'></div>
 
@@ -138,10 +135,10 @@
 
 	<div class="block-container">
 		<div class="block startButton2">Click to Start</div>
-		<div class="block black" id='15'>15</div>
-		<div class="block" >16</div>
-		<div class="block black" >17</div>
-		<div class='block' >18</div>
+		<div class="block black" id='15'></div>
+		<div class="block" ></div>
+		<div class="block black" ></div>
+		<div class='block' ></div>
 		<div class='block exit exit2' id='20' >Exit</div>
 		
 
