finish done, added return

--- a/index.html
+++ b/index.html
@@ -19,12 +19,17 @@
 	<li id="instruct">Instructions</li>	
 </div>
 
-<div class="instrPage">
-	<li class="instrPage">Welcom to Amaze, simply use the mouse to move the cursor to paly the game.
-	</li>
-	<li class="instrPage">The Objective is to move the cursor through the maze without touching the walls.
-	</li>
-	<li class="instrPage">To start the game click start.Beware there is a timer, if time runs out then its Game Over. </li>
+<div>
+	<ul>
+		<li class="instrPage">Welcom to Amaze, simply use the mouse to move the cursor to paly the game.
+		</li>
+		<li class="instrPage">The Objective is to move the cursor through the maze without touching the walls.
+		</li>
+		<li class="instrPage">To start the game click start.Beware there is a timer, if time runs out then its Game Over. 
+		</li>
+	</ul>
+	
+	<div id="return">return</div>
 </div>
 <div id="time">clock</div>
 
@@ -74,11 +79,13 @@
 </div>
 
 
-<aside id="next"> Next </aside>
+<aside id="next"> Next for level 2 </aside>
 
 <div id="tryAgain">
 	<li>Try Again </li>
+
 </div>
+
 
 
 	
